# my-api

./: Cargo.toml  Dockerfile  README.md  docker-compose-traefik-test.yml  docker-compose.yml  ollama-pull-model.sh
mcp-server/: Dockerfile  main.py
src/: main.rs
traefik/: traefik-minimal.yml
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx
